# WP-2040T_HeadphoneAMP

./: .gitignore  README.md
software/: CMakeLists.txt  README.md  tusb_config.h  usb_descriptors.c  usb_descriptors.h  util.h  wp-dlc.c
software/Lighting/: LampArray.c  Neopixel.c
software/src/: CMakeLists.txt  usb_sound_card.c
software/src/tpa6130/: tpa6130.c  tpa6130.h
